[tool.poetry]
name = "airflow"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "3.8.18"
boto3 = "^1.10.40"
pyathena = "^1.9.0"
pyyaml = "^6.0"
google-api-python-client = "^1.12.8"
google-cloud-storage = "^1.36.2"
pandas-gbq = "0.13.2"
influxdb = "5.2.1"
apache-airflow = "2.7.3"
apache-airflow-providers-cncf-kubernetes = "4.3.0"
apache-airflow-providers-google = "8.3.0"
apache-airflow-providers-influxdb = "2.0.0"
apache-airflow-providers-apache-spark = "3.0.0"
apache-airflow-providers-amazon = "5.0.0"
flask-admin = "^1.5.8"
protobuf = "3.20.*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
