[project]
name = "airflow"
version = "0.1.1"
description = ""
authors = []

dependencies = [
    "boto3 ~= 1.15",
    "pyathena ~= 1.9.0",
    "pyyaml >= 5.5",
    "google-api-python-client ~= 1.12.8",
    "google-cloud-storage ~= 1.36.2",
    "pandas-gbq == 0.13.2",
    "influxdb == 5.2.1",
    "apache-airflow == 2.5.1",
    "apache-airflow-providers-cncf-kubernetes == 4.3.0",
    "apache-airflow-providers-google == 8.3.0",
    "apache-airflow-providers-influxdb == 2.0.0",
    "apache-airflow-providers-apache-spark == 3.0.0",
    "apache-airflow-providers-amazon == 5.0.0",
    "flask-admin ~= 1.5.8",
    "flask == 2.2.2",
    "Flask-Session == 0.4.0",
    "protobuf == 3.20.*",
    "pybars3 == 0.9.7",
    "retrying == 1.3.4",
    "vertica-python == 1.3.8",
    "docutils == 0.18",
    "datadog == 0.50.1",
    "SQLAlchemy == 1.4.46",
    "gcsfs>=2024.10.0",
    "openpyxl>=3.1.5",
    # Fixed versions to solve progblems qwith Airflow 2.5.1 build
    "pendulum==2.1.2",
    "werkzeug==2.2.3",
    "connexion==2.14.2",
]
readme = "README.md"
requires-python = "==3.10.14"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
