[tool.poetry]
name = "jupyter"
version = "1.0.0"
description = "Jupyter Image for DS Pubnative"
authors = ["Data Science <datascience@verve.com>"]

[tool.poetry.dependencies]
python = "^3.8"
altair = "^4.1.0"
jax = "^0.2.8"
Keras = "^2.4.3"
matplotlib = "^3.3.3"
mysql-connector-python = "^8.0.22"
numpy = "^1.19.5"
pandas = "^1.2.0"
pyathena = "^2.1.0"
pystan = "^2.19.1"
scikit-learn = "^0.24.0"
seaborn = "^0.11.1"
setuptools = "^51.1.2"
tensorflow = "^2.4.0"
tensorflow-probability = "^0.12.1"
tqdm = "^4.56.0"
Werkzeug = "^1.0.1"
pyarrow = "^2.0.0"
awscli = "^1.18.215"
s3fs = "0.4.*"
category-encoders = "^2.2.2"
fbprophet = "^0.7.1"
nb-black = "^1.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
