[tool.poetry]
name = "jupyterhub"
version = "1.3.2"
description = ""
authors = ["Abhinav <abhinav.jain@pubnative.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = {extras = ["performance", "computation", "parquet", "feather", "fss", "gcp", "aws", "consortium-standard"], version = "^2.1.1"}
pyspark = "3.4.1"
scikit-learn = "^1.3.1"
category-encoders = "^2.6.2"
jsonschema = "^4.19.1"
mysql-connector-python = "^8.1.0"
pendulum = "^2.1.2"
kafka-python = "^2.0.2"
optbinning = "^0.18.0"
plotnine = "^0.12.3"
lightgbm = "^4.2.0"
pyyaml = "^6.0.1"
pydantic = "^2.5.3"
prometheus-client = "^0.19.0"
optuna = "^3.5.0"
influxdb = "^5.3.1"
google-cloud-bigquery = "^3.16.0"
tensorflow = "2.14.0"
tensorflow-probability = "^0.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
