[tool.poetry]
name = "jupyterhub"
version = "2.0.13"
description = ""
authors = ["Abhinav <abhinav.jain@pubnative.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pandas = {extras = ["performance", "computation", "parquet", "feather", "fss", "gcp", "aws", "consortium-standard"], version = "^2.3.3"}
pyspark = "4.0.1"
scikit-learn = "^1.7.2"
category-encoders = "^2.8.1"
jsonschema = "^4.25.1"
mysql-connector-python = "^9.4.0"
pendulum = "^3.1.0"
kafka-python = "^2.2.15"
#optbinning = "^0.18.0"
plotnine = "^0.15.0"
lightgbm = "^4.6.0"
pyyaml = "^6.0.3"
pydantic = "^2.11.10"
prometheus-client = "^0.23.1"
optuna = "^4.5.0"
influxdb = "^5.3.2"
google-cloud-bigquery = "^3.38.0"
tensorflow = "2.20.0"
tensorflow-probability = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
