[tool.poetry]
name = "airflow"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.10.40"
pyathena = "^1.9.0"
pyyaml = "^5.3"
google-api-python-client = "^1.12.8"
google-cloud-storage = "^1.36.2"
pandas-gbq = "0.13.2"
influxdb = "5.2.1"
apache-airflow-providers-cncf-kubernetes = "4.3.0"
apache-airflow-providers-google = "*"
apache-airflow-providers-influxdb = "2.0.0"
apache-airflow-providers-apache-spark = "3.0.0"



[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
