[tool.poetry]
name = "jupyter-dependencies"
version = "0.1.0"
description = ""
authors = ["abhi <abhinav.jain@pubnative.net>"]

[tool.poetry.dependencies]
python = "^3.8"
pyspark = "^3.1.1"
pyarrow = "^2.0.0"
matplotlib = "^3.3.3"
numpy = "1.19.5"
scipy = "^1.6.0"
pandas = "^1.2.1"
awscli = "^1.18.219"
boto3 = "^1.16.59"
scikit-learn = "^0.24.1"
category-encoders = "^2.2.2"
joblib = "^1.0.0"
fsspec = "^0.8.5"
jsonschema = "^3.2.0"
influxdb = "^5.3.1"
s3fs = "0.4.*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
