[tool.poetry]
name = "jupyter-dependencies"
version = "0.1.0"
description = ""
authors = ["abhi <abhinav.jain@pubnative.net>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
pyspark = "^3.2.0"
mysql-connector-python = "^8.0.27"
pyarrow = "^6.0.1"
awscli = "^1.22.9"
matplotlib = "^3.5.0"
numpy = "1.20.0"
scipy = "^1.7.2"
pandas = "^1.3.4"
boto3 = "^1.20.9"
scikit-learn = "^1.0.1"
category-encoders = "^2.3.0"
joblib = "^1.1.0"
fsspec = "^2021.11.0"
catboost = "^1.0.3"
jsonschema = "^4.2.1"
influxdb = "^5.3.1"
s3fs = "0.4.*"
google-cloud-bigquery = "^2.30.1"
google-cloud-bigquery-storage = "^2.10.1"
tensorflow = "^2.7.0"
tensorflow-probability = "^0.15.0"
seaborn = "^0.11.2"
plotnine = "^0.8.0"
black = "^21.11b1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
